# pclPipeline

./: .gitignore  README.md
2/: CMakeCache.txt  Makefile  catkin_make.cache  cmake_install.cmake  main  matrix_transform
src/: .cluster_extraction.cpp.swp  .conditional_euclidean_clustering.cpp.swo  .conditional_euclidean_clustering.cpp.swp  .segmentation_pipeline.cpp.swp  .statistical_removal.cpp.swo  CMakeLists.txt  cloud_viewer.cpp  cluster_extraction.cpp  compress.cpp  conditional_euclidean_clustering.cpp  extract_indices.cpp  iterative_closest_point.cpp  matrix_transform.cpp  octree_change_detection.cpp  polygonal.cpp  region_growing_rgb_segmentation.cpp  region_growing_segmentation.cpp  segmentation_pipeline.cpp  statistical_removal.cpp
src/pipeline/: .main.cpp.swl  .main.cpp.swm  .main.cpp.swn  .main.cpp.swp  main.cpp
src/pipeline/config/: config.cfg
src/pipeline/devel/: .catkin  .rosinstall  setup.sh
src/pipeline/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
src/pipeline/include/: .pipeline.hpp.swp  pipeline.hpp
src/pipeline/structures/: Point.hpp  PointCloud.hpp  PointCloudData.hpp
